fix: make gap between bookmarks and bottom toolbar larger

--- a/src/components/NewtabPage/NewtabPage.module.css
+++ b/src/components/NewtabPage/NewtabPage.module.css
@@ -4,6 +4,7 @@
 
 .newtabWrapper {
   display: grid;
+  grid-gap: 1rem;
   grid-template-rows: 1fr auto;
   min-height: 100vh;
 }
